--- a/d3/index.html
+++ b/d3/index.html
@@ -1,18 +1,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Brooklyn Visualization</title>
+    <title>D3 Brooklyn Visualization</title>
     <style>
 * {
   font-family: Calibri,Helvetica;
   font-size: 20px;
-}
+}   
     </style>
 </head>
 <body>
     <ul>
-        <li><a href="bubbletree/index.html">Bubble Tree</a></li>
-        <li><a href="d3/index.html">D3.js</a></li>
+        <li><a href="treemap.html">Tree Map</a></li>
+        <li><a href="sunburst.html">Radial Sunburst</a></li>
 </body>
 </html>
     
