Added packed circles in D3

--- a/d3/index.html
+++ b/d3/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="treemap.html">Tree Map</a></li>
         <li><a href="sunburst.html">Radial Sunburst</a></li>
+        <li><a href="circles.html">Circle Packing</a></li>
 </body>
 </html>
     
